[package]
name = "smb2-practice-mod"
version = "2.0.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
panic-halt = "0.2.0"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"

[lib]
crate-type = ["staticlib"]
test = false
bench = false
