[package]
name = "smb2-practice-mod"
version = "2.0.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[lib]
crate-type = ["staticlib"]
test = false
bench = false
